@@ -1019,7 +1019,7 @@ estate_burghers_jewish_scapegoats = {
 }
 
 estate_burghers_jewish_sanctuary = {
-	icon = privilege_promoto_dhimmi_nobles
+	icon = privilege_jewish_dhimmis
 	max_absolutism = -5
 	loyalty = -0.1
 	can_select = {
@@ -1458,6 +1458,48 @@ estate_nomadic_tribes_steppe_colonization = {
 						is_empty = yes
 					}
 				}
+			}
+		}
+	}
+}
+
+# Dhimmi
+
+estate_dhimmi_jewish_advisors = {
+	icon = privilege_jewish_dhimmis
+	max_absolutism = -5
+	loyalty = 0.05
+	influence = 0.1
+	is_valid = {
+		OR = {
+			tag = ADU
+			primary_culture = andalucian
+			primary_culture = mozarabic
+		}
+		capital_scope = {
+			superregion = iberia_superregion
+		}
+	}
+	can_select = { }
+	on_granted = {
+		custom_tooltip = estate_dhimmi_jewish_advisors.tt
+	}
+	penalties = {
+		tolerance_own = -1
+		church_loyalty_modifier = -0.05
+	}
+	benefits = { }
+	ai_will_do = {
+		factor = 5
+		modifier = {
+			factor = 0
+			is_absolutism_active = yes
+		}
+		modifier = {
+			factor = 2
+			OR = {
+				tag = ADU
+				tag = GRA
 			}
 		}
 	}
