@@ -123,6 +123,7 @@ estate_dhimmi = {
 	privileges = {
 		estate_dhimmi_land_rights
 		estate_dhimmi_lighter_dhimmi_taxes
+		estate_dhimmi_jewish_advisors
 		estate_dhimmi_guaranteed_autonomy
 		estate_dhimmi_dhimmi_nobles
 		estate_dhimmi_manpower
