@@ -7458,3 +7458,61 @@ country_event = {
 		remove_estate_privilege = estate_burghers_dutch_water_lines
 	}
 }
+
+country_event = {
+	id = hremodevents.140
+	title = "HREMT140"
+	desc = "HREMD140"
+	picture = ADVISOR_eventPicture
+
+	is_triggered_only = yes
+
+	option = {
+		name = "HREMA140"
+		generate_scaled_advisor_of_type_and_religion_effect = {
+			type = philosopher
+			religion = jewish
+			discount = yes
+		}
+	}
+	option = {
+		name = "HREMB140"
+		generate_scaled_advisor_of_type_and_religion_effect = {
+			type = natural_scientist
+			religion = jewish
+			discount = yes
+		}
+	}
+	option = {
+		name = "HREMC140"
+		generate_scaled_advisor_of_type_and_religion_effect = {
+			type = statesman
+			religion = jewish
+			discount = yes
+		}
+	}
+	option = {
+		name = "HREMDD140"
+		generate_scaled_advisor_of_type_and_religion_effect = {
+			type = trader
+			religion = jewish
+			discount = yes
+		}
+	}
+	option = {
+		name = "HREME140"
+		generate_scaled_advisor_of_type_and_religion_effect = {
+			type = army_reformer
+			religion = jewish
+			discount = yes
+		}
+	}
+	option = {
+		name = "HREMF140"
+		generate_scaled_advisor_of_type_and_religion_effect = {
+			type = quartermaster
+			religion = jewish
+			discount = yes
+		}
+	}
+}
