@@ -60,12 +60,12 @@ country_event = {
 			if = {
 				limit = {
 					DNZ = { exists = no }
-					every_province = {
-						limit = {
-							NOT = { area = danzig_area }
-						}
-						remove_core = DNZ
+				}
+				every_province = {
+					limit = {
+						NOT = { area = danzig_area }
 					}
+					remove_core = DNZ
 				}
 			}
 			every_owned_province = {
