@@ -1049,8 +1049,8 @@ spriteTypes = {
 		texturefile = "gfx/interface/privileges/privilege_dutch_water_lines.dds"
 	}
 	spriteType = {
-		name = "privilege_war"
-		texturefile = "gfx/interface/privileges/privilege_war.dds"
+		name = "privilege_jewish_dhimmis"
+		texturefile = "gfx/interface/privileges/privilege_jewish_dhimmis.dds"
 	}
 
 	#Great Projects
