@@ -235,3 +235,6 @@
  almoravid_invasion_title: "Launch Almoravid Invasion"
  almoravid_invasion_desc: "Once we have united the Sanhaja Berbers of Western Sahara under our banner and convinced them of our worthy intentions, we will possess adequate strength to cross the Atlas Mountains and subdue the weak Emirates of Morocco."
  almoravid_invasion.tt: "We will establish the Almoravid Empire and annex southern Morocco."
+ hire_jewish_visirs_title: "Recruit a Jewish Vizier"
+ hire_jewish_visirs_desc: "Our religious freedom and cultural openness enables the systematic recruitment of Jewish viziers for our court."
+ hire_jewish_visirs.tt: "We will get a discounted §YArtist§! §YNatural Scientist§!, §YStatesman§!, §YTrader§!, §YArmy Reformer§! or §!Quartermaster§! of Jewish religion."
