@@ -235,3 +235,6 @@
  almoravid_invasion_title: "Beginnt die almoravidische Invasion"
  almoravid_invasion_desc: "Sobald wir die Sanhadscha-Berber der Westsahara unter unserem Banner vereint und sie von unseren ehrenwerten Absichten überzeugt haben, werden wir über ausreichend Stärke verfügen, um das Atlasgebirge zu überqueren und die schwachen Emirate Marokkos zu unterwerfen."
  almoravid_invasion.tt: "Wir werden das Almoravidenreich begründen und Südmarokko annektieren."
+ hire_jewish_visirs_title: "Rekrutiert einen jüdischen Wesir"
+ hire_jewish_visirs_desc: "Unsere Religionsfreiheit und kulturelle Offenheit ermöglicht die systematische Anwerbung von jüdischen Wesiren für unseren Hof."
+ hire_jewish_visirs.tt: "Wir erhalten einen vergünstigten §YKünstler§!, §YNaturwissenschaftler§!, §YStaatsmann§!, §YHändler§!, §YArmeereformer§! oder §!Quartiermeister§!, der der jüdischen Religion angehört."
