@@ -2042,7 +2042,14 @@
  HREMT139: "Continuation of the Dutch Water Lines"
  HREMD139: "To protect our country from enemy armies, we have purposefully submerged parts of our land to create natural defensive barriers which protect our cities and confound our enemies. While maintaining this situation is very powerful, it is also expensive and should only be considered in extreme emergencies."
  HREMA139: "Leave the land under water."
- HREMB139: "Let the water flow back."
+ HREMT140: "A Jewish Vizier for [Root.GetName]"
+ HREMD140: "Al-Andalus represented the most important center for Jewish culture and science in the 10th century. Thanks to the patronage of the Caliphs, several important Jewish figures held high positions at the Caliphal court. As a result, Al-Andalus attained prosperity and affluence. Jewish scholars at that time made decisive contributions to poetry, philosophy, medicine, geography, mathematics and much more.\n[Root.Monarch.GetTitle] [Root.Monarch.GetName] has decided to promise a committed and emerging Jewish scholar of our country the opportunity to be employed at the [Root.GetAdjective] court. We have not yet decided to whom exactly we will grant this honour. Who do we choose today?"
+ HREMA140: "An Artist"
+ HREMB140: "A Natural Scientist"
+ HREMC140: "A Statesman"
+ HREMDD140: "A Trader"
+ HREME140: "An Army Reformer"
+ HREMF140: "A Quartermaster"
  FBIT1: "Fall of the Babenbergs"
  FBID1: "For centuries the house of Babenberg has defended the empire's eastern frontier. The last Babenberg monarch, Friedrich II, tried to seize upon the Mongol invasion of Hungary by grabbing several border counties for himself. He underestimated the Hungarians' resolve, however, and was killed in the ensuing counterattack on the banks of the River Leitha in June of 1246.\nLeaving no male heirs behind, his titles became contested between the claims of his daughters Margarete and Gertrude. The former aligned herself with the Premyslids of Bohemia, while the latter betrayed her Premyslid connections for the Swabian margrave Hermann of Baden. The local nobility of Austria and Styria must decide whether to support the vagrant margrave who currently roams the land seeking recognition, or the more powerful kingdom to the north."
  FBIA1: "Support the Premyslids"
