@@ -2043,6 +2043,14 @@
  HREMD139: "Um unser Land vor feindlichen Armeen zu schützen, haben wir bewusst Teile unseres Landes unter Wasser gesetzt, um natürliche Verteidigungsbarrieren zu schaffen, die unsere Städte schützen und unsere Feinde irritieren. Die Aufrechterhaltung dieser Situation ist zwar sehr mächtig, aber auch teuer und sollte nur in extremen Notfällen in Betracht gezogen werden."
  HREMA139: "Belasst das Land unter Wasser."
  HREMB139: "Lasst das Wasser zurückfließen."
+ HREMT140: "Ein jüdischer Wesir für [Root.GetName]"
+ HREMD140: "Al-Andalus war im 10. Jahrhundert das wichtigste Zentrum der jüdischen Kultur und Wissenschaft. Dank der Schirmherrschaft der Kalifen bekleideten mehrere bedeutende jüdische Persönlichkeiten hohe Positionen am Kalifenhof. Infolgedessen erlangte Al-Andalus Wohlstand und Reichtum. Jüdische Gelehrte leisteten in dieser Zeit entscheidende Beiträge zur Poesie, Philosophie, Medizin, Geografie, Mathematik und vielem mehr.\n[Root.Monarch.GetTitle] [Root.Monarch.GetName] hat beschlossen, einem engagierten und aufstrebenden jüdischen Gelehrten unseres Landes die Möglichkeit zu geben, am [Root.GetAdjective]en Hof beschäftigt zu werden. Wir haben uns noch nicht entschieden, wem genau wir diese Ehre zuteil werden lassen. Wen wählen wir heute aus?"
+ HREMA140: "Einen Künstler"
+ HREMB140: "Einen Wissenschaftler"
+ HREMC140: "Einen Staatsmann"
+ HREMDD140: "Einen Händler"
+ HREME140: "Einen Armeereformer"
+ HREMF140: "Einen Quartiermeister"
  FBIT1: "Das Ende der Babenberger"
  FBID1: "Seit Jahrhunderten verteidigt das Haus Babenberg die Ostgrenze des Reiches. Der letzte babenbergische Monarch Friedrich II. versuchte, die mongolische Invasion Ungarns zu nutzen, indem er sich mehrere Grenzgebiete schnappte. Er unterschätzte jedoch die Entschlossenheit der Ungarn und wurde bei dem anschließenden Gegenangriff am Ufer der Leitha im Juni 1246 getötet.\nDa er keine männlichen Erben zurückließ, wurden seine Titel zwischen den Forderungen seiner Töchter Margarete und Gertrud angefochten. Erstere orientierte sich an den böhmischen Premysliden, letztere verriet ihre Verwandtschaft zu den Premysliden für den schwäbischen Markgrafen Hermann von Baden. Der österreichische und steirische Adel muss sich entscheiden, ob er den umherziehenden Markgrafen, der derzeit auf der Suche nach Anerkennung das Land durchstreift, oder das mächtigere Königreich im Norden unterstützt."
  FBIA1: "Unterstützt die Premysliden"
