@@ -6,6 +6,7 @@
 -Added 6 new papal bulls for the Catholique papacy
 -Small fixes for the following mission trees: Papal States, Teutonic Order, Livonian Order, France, Navarra, Bohemia, Worms, Byzantium, Bogomilist, Taifa, Burgundy
 -Added an event for the Arumer Zwarte Hoop
+-Added 1 new estate privilege: 1 for Muslum Andalusian nations (Hire Jewish Viziers/Dhimmis)
 -Buffed invading nations
 -Fixed CTD caused by missing Epic Games store button
 -Some more missions now utilise monuments if you own Leviathan
